cmake_minimum_required(VERSION 2.8.3)
project(scene_recognition)

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
find_package(catkin REQUIRED)









catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES scene_recognition
#  CATKIN_DEPENDS other_catkin_pkg
#  DEPENDS system_lib
)



