<?xml version="1.0"?>
<package>
  <name>scene_recognition</name>
  <version>0.1.0</version>
  <description>The scene_recognition package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="tzh@todo.todo">tzh</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>hi_slam</build_depend>
  <build_depend>pluginlib</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>hi_slam</run_depend>
  <run_depend>pluginlib</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <hi_slam plugin="${prefix}/scene_recognition.xml" />
    <hi_slam plugin="${prefix}/scene_recognition_cnn.xml" />

  </export>
</package>
