<?xml version="1.0"?>
<package>
  <name>orb_slam2</name>
  <version>0.1.0</version>
  <description>The orb_slam2 package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="tzh@todo.todo">tzh</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>opencv</build_depend>
  <build_depend>eigen</build_depend>


  <run_depend>opencv</run_depend>
  <run_depend>eigen</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
